<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="56dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="24dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardBackgroundColor="#167c80"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_gravity="bottom"
                        android:alpha="0.3"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_los_coin"
                        android:translationX="-48dp"
                        android:translationY="48dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="16dp">

                        <TextView
                            android:id="@+id/main_card_current_balance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/current_balance"
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/main_card_current_balance"
                            android:gravity="end"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginEnd="8dp"
                                android:contentDescription="@null"
                                android:src="@drawable/ic_los_coin" />

                            <TextView
                                android:id="@+id/main_card_balance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="monospace"
                                android:textColor="@android:color/white"
                                android:textSize="72sp"
                                tools:text="2000" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/main_card_owner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:textAlignment="textEnd"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            tools:text="dan_baned_me" />
                    </RelativeLayout>
                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/main_btn_shop"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:maxLines="1"
                    android:text="@string/shop_label" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/main_btn_collectibles"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:maxLines="1"
                    android:text="@string/collectibles_label" />
            </LinearLayout>

            <include layout="@layout/activity_marinating" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/commits_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_commits"
        android:src="@drawable/ic_add_marinating" />
</FrameLayout>